# Latex_CV_Updater

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
Deba_CV/: cv-llt.tex  education.tex  employment.tex  skills.tex
cv_updater/: __init__.py  __main__.py  cli.py  compiler.py  generator.py  models.py  parser.py
cv_updater/templates/: about.tex.j2  custom_section.tex.j2  cv_main.tex.j2  education.tex.j2  employment.tex.j2  misc.tex.j2  project_highlights.tex.j2  referee.tex.j2  skills.tex.j2
web/: app.py  session_utils.py
web/static/: tui.css  tui.js
web/templates/: about.html  base.html  custom.html  custom_edit.html  download.html  education.html  employment.html  index.html  misc.html  personal.html  project_highlights.html  referee.html  reorder.html  skills.html  upload.html
