[project]
name = "cv-updater"
version = "0.1.0"
description = "Interactive CLI agent for creating and updating LaTeX CVs using the curve document class"
requires-python = ">=3.9"
dependencies = [
    "jinja2>=3.0",
    "questionary>=2.0",
    "rich>=13.0",
    "flask>=3.0",
    "flask-session>=0.8",
]

[project.scripts]
cv-updater = "cv_updater.cli:main"
cv-web     = "web.app:run_dev"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cv_updater", "web"]

[tool.hatch.build.targets.wheel.force-include]
"cv_updater/templates" = "cv_updater/templates"
"web/templates"        = "web/templates"
"web/static"           = "web/static"
